# fire

./: README.md  requirements.txt  setup.cfg
fire/: mail.py  nlp.py  regex.py  slack.py
