[metadata]
name = fire
version = 0.0.1
author = Ian Goodrich
author_email = ian.goodrich@gsccnetwork.org
description = Misc data tools
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/specialprocedures/fire
project_urls =
    Bug Tracker = https://github.com/specialprocedures/fire/issues
classifiers =
    Programming Language :: Python :: 3
    License :: Proprietary
    Operating System :: Debian

[options]
packages = find:
python_requires = >=3.6

# [options.packages.find]
